# image2text

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  screencapture.cpp  screencapture.h
